--- a/public/uploadresultsAd.html
+++ b/public/uploadresultsAd.html
@@ -269,7 +269,7 @@
 
       try {
         // Auto-detect local or deployed URL
-        const response = await fetch("http://localhost:3000/admin/upload-result-pdf", {
+        const response = await fetch("https://crr-noc.onrender.com/admin/upload-result-pdf", {
   method: "POST",
   body: formData
 });
