--- a/public/uploadresultsAd.html
+++ b/public/uploadresultsAd.html
@@ -117,7 +117,7 @@
       border: 1px solid rgba(255, 255, 255, 0.2);
       background: rgba(255, 255, 255, 0.1);
       font-size: 15px;
-      color: white;
+      color: black;
       backdrop-filter: blur(4px);
     }
     input[type="file"]::file-selector-button {
