--- a/public/studentdetails.html
+++ b/public/studentdetails.html
@@ -203,6 +203,7 @@
         <li class="active"><a href="#"><span>📄</span> Student details</a></li>
         <li><a href="editprofile.html"><span>✏️</span> Edit profile</a></li>
         <li><a href="feedetails.html"><span>🎓</span> Fee details</a></li>
+        <li><a href="studentresults.html"><span>📊</span> Student Results</a></li>
         <li><a href="updaterefno.html"><span>🔄</span> Update fee payment</a></li>
         <li><a href="generatenoc.html"><span>➕</span> Generate NOC</a></li>
         <li><a href="settings.html"><span>⚙️</span> Settings</a></li>
