--- a/public/editprofile.html
+++ b/public/editprofile.html
@@ -265,6 +265,7 @@
         <li><a href="studentdetails.html"><span>📄</span> Student details</a></li>
         <li class="active"><a href="#"><span>✏️</span> Edit profile</a></li>
         <li><a href="feedetails.html"><span>🎓</span> Fee details</a></li>
+        <li><a href="studentresults.html"><span>📊</span> Student Results</a></li>
         <li><a href="updaterefno.html"><span>🔄</span> Update fee payment</a></li>
         <li><a href="generatenoc.html"><span>➕</span> Generate NOC</a></li>
         <li><a href="settings.html"><span>⚙️</span> Settings</a></li>
