--- a/public/notifications.html
+++ b/public/notifications.html
@@ -198,6 +198,7 @@
         <li><a href="editprofile.html"><span>✏️</span> Edit profile</a></li>
         <li><a href="feedetails.html"><span>🎓</span> Fee details</a></li>
         <li><a href="updaterefno.html"><span>🔄</span> Update fee payment</a></li>
+        <li><a href="studentresults.html"><span>📊</span> Student Results</a></li>
         <li><a href="generatenoc.html"><span>➕</span> Generate NOC</a></li>
         <li><a href="settings.html"><span>⚙️</span> Settings</a></li>
         <li class="active"><a href="notifications.html"><span>🔔</span> Notifications</a></li>
