--- a/public/studentresults.html
+++ b/public/studentresults.html
@@ -242,97 +242,72 @@
 
   <div class="mobile-toggle" onclick="toggleMobileMenu()">☰</div>
 
-  <script>
-    function toggleMobileMenu() {
-      const sidebar = document.querySelector('.sidebar');
-      sidebar.classList.toggle('open');
+<script>
+  async function fetchResults() {
+    const regno = localStorage.getItem("regno");
+    const semester = document.getElementById("semester").value;
+    const container = document.getElementById("resultContainer");
+
+    container.innerHTML = "";
+
+    if (!regno) {
+      container.innerHTML = "<p class='error'>Student not logged in. Please login first.</p>";
+      return;
     }
 
-    document.querySelectorAll(".menu li a").forEach(link => {
-      link.addEventListener("click", () => {
-        if (window.innerWidth <= 768) {
-          document.querySelector('.sidebar').classList.remove('open');
-        }
+    if (!semester) {
+      container.innerHTML = "<p class='error'>Please select a semester.</p>";
+      return;
+    }
+
+    try {
+      container.innerHTML = "<p>Loading results...</p>";
+
+      const response = await fetch(`https://crr-noc.onrender.com/student/results`, {
+        method: "POST",
+        headers: { "Content-Type": "application/json" },
+        body: JSON.stringify({ regno, semester })
       });
-    });
 
-    document.addEventListener("DOMContentLoaded", () => {
-      const userId = localStorage.getItem("userId") || localStorage.getItem("regno");
-      if (!userId) {
-        alert("Please login first.");
-        window.location.href = "index.html";
-        return;
-      }
-      document.getElementById("userId").textContent = userId;
-    });
+      const data = await response.json();
 
-    async function fetchResults() {
-      const regno = localStorage.getItem("regno") || localStorage.getItem("userId");
-      const semester = document.getElementById("semester").value;
-      const container = document.getElementById("resultContainer");
-
-      container.innerHTML = "";
-
-      if (!regno) {
-        container.innerHTML = "<p class='error'>Student not logged in. Please login first.</p>";
+      if (!data.results || data.results.length === 0) {
+        container.innerHTML = "<p class='error'>No results found for this semester.</p>";
         return;
       }
 
-      if (!semester) {
-        container.innerHTML = "<p class='error'>Please select a semester.</p>";
-        return;
-      }
+      let html = `<h3>Results for <strong>${data.regno}</strong> - Semester <strong>${data.semester}</strong> (${data.type})</h3>`;
+      html += `<table>
+                <tr>
+                  <th>Subject Code</th>
+                  <th>Subject Name</th>
+                  <th>Grade</th>
+                  <th>Credits</th>
+                </tr>`;
 
-      try {
-        container.innerHTML = "<p>Loading results...</p>";
-        const response = await fetch(`https://crr-noc.onrender.com/student/results/${regno}?semester=${semester}`);
-        const data = await response.json();
+      data.results.forEach(row => {
+        html += `<tr>
+                  <td>${row.subcode}</td>
+                  <td>${row.subname || "-"}</td>
+                  <td>${row.grade}</td>
+                  <td>${row.credits || "-"}</td>
+                </tr>`;
+      });
 
-        if (!data.results || data.results.length === 0) {
-          container.innerHTML = "<p class='error'>No results found for this semester.</p>";
-          return;
-        }
+      html += `</table>`;
+      html += `<div class="stats">
+                 <strong>SGPA:</strong> ${data.sgpa} &nbsp;&nbsp;
+                 <strong>CGPA:</strong> ${data.cgpa} &nbsp;&nbsp;
+                 <strong>Percentage:</strong> ${data.percentage}%
+               </div>`;
 
-        let html = `<h3>Results for <strong>${data.regno}</strong> - Semester <strong>${data.semester}</strong></h3>`;
-        html += `<table>
-                  <tr>
-                    <th>Subject Code</th>
-                    <th>Subject Name</th>
-                    <th>Grade</th>
-                    <th>Credits</th>
-                  </tr>`;
-
-        data.results.forEach(row => {
-          html += `<tr>
-                    <td>${row.subcode}</td>
-                    <td>${row.subname}</td>
-                    <td>${row.grade}</td>
-                    <td>${row.credits}</td>
-                  </tr>`;
-        });
-
-        html += `</table>`;
-        html += `<div class="stats">
-                   <strong>SGPA:</strong> ${data.sgpa} &nbsp;&nbsp;
-                   <strong>CGPA:</strong> ${data.cgpa} &nbsp;&nbsp;
-                   <strong>Percentage:</strong> ${data.percentage}%
-                 </div>`;
-
-        container.innerHTML = html;
-      } catch (err) {
-        console.error("Error fetching results:", err);
-        container.innerHTML = "<p class='error'>Error fetching results. Please try again later.</p>";
-      }
+      container.innerHTML = html;
+    } catch (err) {
+      console.error("Error fetching results:", err);
+      container.innerHTML = "<p class='error'>Error fetching results. Please try again later.</p>";
     }
+  }
+</script>
 
-    function logout() {
-      localStorage.removeItem("userId");
-      localStorage.removeItem("regno");
-      if ('caches' in window) {
-        caches.keys().then(names => names.forEach(name => caches.delete(name)));
-      }
-      window.location.replace("index.html");
-    }
-  </script>
 </body>
 </html>
