--- a/public/studentresults.html
+++ b/public/studentresults.html
@@ -1,118 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta charset="UTF-8">
   <title>Student Results</title>
   <link rel="icon" href="crrengglogo.png" type="image/png" />
   <style>
-    * {
-      margin: 0;
-      padding: 0;
-      box-sizing: border-box;
-      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    }
-
     body {
-      background-color: #2e2e2e;
-    }
-
-    a {
-      text-decoration: none;
-      color: inherit;
-    }
-
-    .container {
-      display: flex;
-      min-height: 100vh;
-    }
-
-    .sidebar {
-      width: 270px;
-      background-color: rgb(247, 201, 155);
-      display: flex;
-      flex-direction: column;
+      font-family: 'Poppins', sans-serif;
+      margin: 0;
       padding: 20px;
-      box-shadow: 2px 0 5px rgba(0, 0, 0, 0.2);
-      position: fixed;
-      top: 0;
-      bottom: 0;
-      left: 0;
-      overflow-y: auto;
-      transition: top 0.3s ease-in-out;
-      z-index: 999;
+      background-color: #f5f7fa;
+      color: #333;
     }
 
-    .sidebar h2 {
-      margin: 40px 20px 20px 20px;
-      color: black;
-      font-size: 18px;
-      font-weight: bold;
-    }
-
-    .menu {
-      list-style: none;
-      padding: 0;
-    }
-
-    .menu li {
-      list-style: none;
-      margin-bottom: 15px;
-    }
-
-    .menu li a {
-      display: flex;
-      align-items: center;
-      gap: 10px;
-      font-size: 16px;
-      color: black;
-      padding: 12px 20px;
-      border-radius: 8px;
-      transition: all 0.3s ease;
-    }
-
-    .menu li a:hover,
-    .menu li.active a {
-      background-color: #d4d4d4;
-      font-weight: bold;
-      transform: translateX(5px);
-      box-shadow: 0 3px 8px rgba(0, 0, 0, 0.15);
-    }
-
-    .menu li a span {
-      font-size: 18px;
-      transition: transform 0.3s ease;
-    }
-
-    .menu li a:hover span {
-      transform: scale(1.2);
-    }
-
-    .logout {
-      background-color: #f09000;
-      color: white;
-      border: none;
-      padding: 10px 20px;
-      border-radius: 20px;
-      cursor: pointer;
-      font-size: 16px;
-      width: 50%;
-      margin: 20px auto 0;
-      transition: background 0.3s ease;
-    }
-
-    .logout:hover {
-      background-color: #d07900;
-    }
-
-    .main-section {
-      flex-grow: 1;
-      background-color: white;
-      padding: 40px 20px;
-      margin-left: 270px;
-    }
-
-    .main-section h2 {
+    h2 {
       text-align: center;
       margin-bottom: 20px;
     }
@@ -157,90 +58,28 @@
       text-align: center;
       margin-top: 20px;
     }
-
-    .mobile-toggle {
-      display: none;
-      position: fixed;
-      bottom: 20px;
-      left: 50%;
-      transform: translateX(-50%);
-      background-color: #1f75cb;
-      color: white;
-      font-size: 24px;
-      padding: 12px 18px;
-      border-radius: 50px;
-      z-index: 9999;
-      cursor: pointer;
-      box-shadow: 0 5px 15px rgba(0, 0, 0, 0.3);
-    }
-
-    @media (max-width: 768px) {
-      .container {
-        flex-direction: column;
-      }
-
-      .sidebar {
-        top: -100%;
-        left: 0;
-        width: 100%;
-        max-height: 90vh;
-      }
-
-      .sidebar.open {
-        top: 0;
-      }
-
-      .main-section {
-        margin-left: 0;
-        padding: 20px;
-      }
-
-      .mobile-toggle {
-        display: block;
-      }
-    }
   </style>
 </head>
 <body>
-  <div class="container">
-    <!-- Sidebar -->
-    <div class="sidebar">
-      <h2>ID: <span id="userId">Loading...</span></h2>
-      <ul class="menu">
-        <li><a href="studentdetails.html"><span>📄</span> Student details</a></li>
-        <li><a href="editprofile.html"><span>✏️</span> Edit profile</a></li>
-        <li><a href="feedetails.html"><span>🎓</span> Fee details</a></li>
-        <li><a href="updaterefno.html"><span>🔄</span> Update fee payment</a></li>
-        <li class="active"><a href="#"><span>📊</span> Student Results</a></li>
-        <li><a href="generatenoc.html"><span>➕</span> Generate NOC</a></li>
-        <li><a href="settings.html"><span>⚙️</span> Settings</a></li>
-        <li><a href="notifications.html"><span>🔔</span> Notifications</a></li>
-      </ul>
-      <button class="logout" onclick="logout()">Logout</button>
-    </div>
 
-    <!-- Main Content -->
-    <div class="main-section">
-      <h2>View Semester Results</h2>
-      <div style="text-align:center;">
-        <label for="semester">Select Semester:</label>
-        <select id="semester" onchange="fetchResults()">
-          <option value="">--Select Semester--</option>
-          <option value="1-1">1-1</option>
-          <option value="1-2">1-2</option>
-          <option value="2-1">2-1</option>
-          <option value="2-2">2-2</option>
-          <option value="3-1">3-1</option>
-          <option value="3-2">3-2</option>
-          <option value="4-1">4-1</option>
-          <option value="4-2">4-2</option>
-        </select>
-      </div>
-      <div id="resultContainer"></div>
-    </div>
+  <h2>View Semester Results</h2>
+
+  <div style="text-align:center;">
+    <label for="semester">Select Semester:</label>
+    <select id="semester" onchange="fetchResults()">
+      <option value="">--Select Semester--</option>
+      <option value="1-1">1-1</option>
+      <option value="1-2">1-2</option>
+      <option value="2-1">2-1</option>
+      <option value="2-2">2-2</option>
+      <option value="3-1">3-1</option>
+      <option value="3-2">3-2</option>
+      <option value="4-1">4-1</option>
+      <option value="4-2">4-2</option>
+    </select>
   </div>
 
-  <div class="mobile-toggle" onclick="toggleMobileMenu()">☰</div>
+  <div id="resultContainer"></div>
 
 <script>
   async function fetchResults() {
@@ -263,12 +102,9 @@
     try {
       container.innerHTML = "<p>Loading results...</p>";
 
-      const response = await fetch(`https://crr-noc.onrender.com/student/results`, {
-        method: "POST",
-        headers: { "Content-Type": "application/json" },
-        body: JSON.stringify({ regno, semester })
-      });
-
+      // ✅ Use FULL URL here to avoid wrong port/host
+      const response = await fetch(`https://crr-noc.onrender.com/student/results/${regno}?semester=${semester}`);
+      
       const data = await response.json();
 
       if (!data.results || data.results.length === 0) {
@@ -276,7 +112,7 @@
         return;
       }
 
-      let html = `<h3>Results for <strong>${data.regno}</strong> - Semester <strong>${data.semester}</strong> (${data.type})</h3>`;
+      let html = `<h3>Results for <strong>${data.regno}</strong> - Semester <strong>${data.semester}</strong></h3>`;
       html += `<table>
                 <tr>
                   <th>Subject Code</th>
@@ -288,9 +124,9 @@
       data.results.forEach(row => {
         html += `<tr>
                   <td>${row.subcode}</td>
-                  <td>${row.subname || "-"}</td>
+                  <td>${row.subname}</td>
                   <td>${row.grade}</td>
-                  <td>${row.credits || "-"}</td>
+                  <td>${row.credits}</td>
                 </tr>`;
       });
 
@@ -308,6 +144,7 @@
     }
   }
 </script>
+
 
 </body>
 </html>
