--- a/public/settings.html
+++ b/public/settings.html
@@ -739,7 +739,7 @@
                                         <i class="fas fa-trash-alt"></i>
                                     </div>
                                     <div class="settings-text">
-                                        <div class="settings-title">Delete DU Entries</div>
+                                        <div class="settings-title">Fee Payment History</div>
                                         <div class="settings-description">Manage and delete your DU entry records</div>
                                     </div>
                                 </div>
