--- a/public/uploadmid-marks.html
+++ b/public/uploadmid-marks.html
@@ -165,6 +165,7 @@
       <li onclick="navigateTo('/dumatch')">🔍 DU Match Status</li>
       <li onclick="navigateTo('/removestudents')">🗑️ Delete Students</li>
       <li onclick="navigateTo('/uploadstudents')">📚 Upload Student Data</li>
+      <li onclick="navigateTo('/uploadfees')">💰 Upload Fee Structure</li>
       <li onclick="navigateTo('/addstident')">📚 Add Student</li>
       <li onclick="navigateTo('/staffallocation')">🧑‍🏫 Staff Period Allocation</li>
       <li onclick="navigateTo('/downloadattendance')">📥 Download Attendance</li>
