--- a/public/login.html
+++ b/public/login.html
@@ -361,7 +361,7 @@
         else if (actualRole==="accounts"){ window.location.href="accountspanel.html"; }
         else if (actualRole==="mainaccounts"){ window.location.href="accountspanel.html"; }
         else if (actualRole==="busaccounts"){ window.location.href="accountspanel.html"; }
-        else if (actualRole==="scholarships"){ window.location.href="scholarships.html"; }
+        else if (actualRole==="scholarships"){ window.location.href="accountspanel.html"; }
         else if (actualRole==="hostel"){ window.location.href="hostelaccounts.html"; }
         else if (actualRole==="correspondent"){ window.location.href="correspondent-dashboard.html"; }
         else if (actualRole==="principal"){ window.location.href="principal-dashboard.html"; }
